--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <p id="email"></p>
             </div>
             <p id="role"></p>
-            <button id="themeToggle">Switch to Dark Mode</button>
+            <button id="themeToggleButton">Switch to Dark Mode</button>
         </header>
 
         <section id="productManagement">
             <h2>Product Management</h2>
-            <ul></ul>
+            <ul>prodductManagementList</ul>
         </section>
 
         <section id="professionalExperience">
