--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section id="productManagement">
             <h2>Product Management</h2>
-            <ul>prodductManagementList</ul>
+            <ul>productManagementList</ul>
         </section>
 
         <section id="professionalExperience">
