--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <section id="productManagement">
             <h2>Product Management</h2>
-            <ul> <p id="productManagementList">/p> </ul>
+            <ul id="productManagementList"></ul>
         </section>
 
         <section id="professionalExperience">
