--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p id="email"></p>
             </div>
             <p id="role"></p>
-            <button id="themeToggleButton">Switch to Dark Mode</button>
+            <button id="themeToggleButton" class="theme-toggle">Switch to Dark Mode</button>
         </header>
 
         <section id="productManagement">
@@ -28,7 +28,6 @@
 
         <section id="professionalExperience">
             <h2>Professional Experience</h2>
-            <!-- Dynamic content from JS will be appended here -->
         </section>
 
         <section id="education">
