--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         <section id="education">
             <h2>Education</h2>
+            <img id="educationLogo" alt="Institution Logo" width="100">
             <h3 id="degree"></h3>
             <p id="institution"></p>
             <p id="coursework"></p>
