--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p id="email"></p>
             </div>
             <p id="role"></p>
-            <button id="themeToggleButton" class="theme-toggle">Switch to Dark Mode</button>
+            <button id="themeToggleButton" class="theme-toggle">Toggle Dark Mode</button>
         </header>
 
         <section id="productManagement">
