--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remy Russell's Resume</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
 </head>
@@ -18,7 +19,11 @@
                 <p id="email"></p>
             </div>
             <p id="role"></p>
-            <button id="themeToggleButton" class="theme-toggle">Toggle Dark Mode</button>
+            <button id="themeToggleButton" class="theme-toggle">
+                <span class="toggle-icon"><i class="fas fa-sun"></i></span>
+                <span class="toggle-text">Toggle Dark Mode</span>
+                <span class="toggle-icon"><i class="fas fa-moon"></i></span>
+            </button>
         </header>
 
         <section id="productManagement">
