--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p id="role"></p>
             <button id="themeToggleButton" class="theme-toggle">
                 <span class="toggle-icon"><i class="fas fa-sun"></i></span>
-                <span class="toggle-text">Toggle Dark Mode</span>
+                <span class="toggle-text"></span>
                 <span class="toggle-icon"><i class="fas fa-moon"></i></span>
             </button>
         </header>
