--- a/index.html
+++ b/index.html
@@ -21,9 +21,19 @@
             <p id="role"></p>
             <button id="themeToggleButton" class="theme-toggle">
                 <span class="toggle-icon"><i class="fas fa-sun"></i></span>
-                <span class="toggle-text"></span>
+                <span class="toggle-text">Toggle Dark Mode</span>
                 <span class="toggle-icon"><i class="fas fa-moon"></i></span>
             </button>
+            <button id="menuToggleButton" class="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </button>
+            <nav id="menu" class="menu">
+                <ul>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <section id="productManagement">
