--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </button>
             <nav id="menu" class="menu">
                 <ul>
-                    <li><a href="about.html">About Me</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="https://www.linkedin.com" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://onlyfans.com" target="_blank" class="menu-icon"><i class="fas fa-user-secret"></i></a></li> <!-- Placeholder icon -->
+                    <li><a href="book-time.html" class="menu-text">Book time with me</a></li>
                 </ul>
             </nav>
         </header>
