--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </button>
             <nav id="menu" class="menu">
                 <ul>
-                    <li><a href="https://www.linkedin.com/remy-russell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="https://youtu.be/dQw4w9WgXcQ?si=DakABDz6B0dUtQH_" target="_blank" class="menu-icon"><i class="fas fa-user-secret"></i></a></li> <!-- Placeholder icon -->
                     <li><a href="book-time.html" class="menu-text">Book time with me</a></li>
                 </ul>
