--- a/prank.html
+++ b/prank.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="prank-container">
-        <img src="bob-the-tomato.jpg" alt="Bob the Tomato">
+        <img src="IMG_0122.png" alt="Bob the Tomato">
         <p>Uh oh!! Bob the Tomato caught you SINNING!!</p>
     </div>
 </body>
