--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </button>
             <nav id="menu" class="menu">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=DakABDz6B0dUtQH_" target="_blank" class="menu-icon"><i class="fas fa-user-secret"></i></a></li> <!-- Placeholder icon -->
-                    <li><a href="book-time.html" class="menu-text">Book time with me</a></li>
+                    <li><a href="https://www.linkedin.com/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="prank.html" target="_blank" class="menu-onlyfans">OnlyFans</a></li>
+                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=y1tCeaj-t_tcTmfb" class="menu-text">Don't click this</a></li>
                 </ul>
             </nav>
         </header>
