--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </button>
             <nav id="menu" class="menu">
                 <ul>
-                    <li><a href="https://www.linkedin.com/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/remyrussell?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="prank.html" target="_blank" class="menu-onlyfans">OnlyFans</a></li>
                     <li><a href="https://youtu.be/dQw4w9WgXcQ?si=y1tCeaj-t_tcTmfb" class="menu-text">Don't click this</a></li>
                 </ul>
