--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <ul>
                     <li><a href="http://linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="prank.html" target="_blank" class="menu-icon"><img src="OnlyFans_Social_Icon_Circle_White.svg" alt="OnlyFans" class="onlyfans-logo"></a></li>
-                    <li><a href="book-time.html" class="menu-text">Book time with me</a></li>
+                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=F-lEIm403gR9UH8k" class="menu-text">Want to know more about me?</a></li>
                 </ul>
             </nav>
         </header>
