--- a/index.html
+++ b/index.html
@@ -19,19 +19,25 @@
                 <p id="email"></p>
             </div>
             <p id="role"></p>
-            <button id="themeToggleButton" class="theme-toggle">
-                <span class="toggle-icon"><i class="fas fa-sun"></i></span>
-                <span class="toggle-text">Toggle Dark Mode</span>
-                <span class="toggle-icon"><i class="fas fa-moon"></i></span>
-            </button>
+            <div class="theme-toggle-wrapper">
+                <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
+                <label for="themeToggleButton" class="theme-toggle-label">
+                    <span class="theme-toggle-track">
+                        <span class="theme-toggle-knob">
+                            <i class="fas fa-sun theme-toggle-icon"></i>
+                            <i class="fas fa-moon theme-toggle-icon"></i>
+                        </span>
+                    </span>
+                </label>
+            </div>
             <button id="menuToggleButton" class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </button>
             <nav id="menu" class="menu">
                 <ul>
-                    <li><a href="http://linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="prank.html" target="_blank" class="menu-icon"><img src="OnlyFans_Social_Icon_Circle_White.svg" alt="OnlyFans" class="onlyfans-logo"></a></li>
-                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=F-lEIm403gR9UH8k" class="menu-text">Want to know more about me?</a></li>
+                    <li><a href="book-time.html" class="menu-text">Book time with me</a></li>
                 </ul>
             </nav>
         </header>
@@ -63,4 +69,8 @@
             
             <h3>Interests & Hobbies</h3>
             <ul id="funSkills"></ul>
-        </section> ​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+        </section>
+    </div>
+</body>
+
+</html>
