--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
                 <p id="email"></p>
             </div>
             <p id="role"></p>
-            <div class="theme-toggle-wrapper">
-                <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
-                <label for="themeToggleButton" class="theme-toggle-label">
-                    <span class="theme-toggle-track">
-                        <span class="theme-toggle-knob">
-                            <i class="fas fa-sun theme-toggle-icon"></i>
-                            <i class="fas fa-moon theme-toggle-icon"></i>
-                        </span>
-                    </span>
-                </label>
-            </div>
             <button id="menuToggleButton" class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </button>
             <nav id="menu" class="menu">
                 <ul>
+                    <li>
+                        <div class="theme-toggle-wrapper" style="display: none;">
+                            <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
+                            <label for="themeToggleButton" class="theme-toggle-label">
+                                <span class="theme-toggle-track">
+                                    <span class="theme-toggle-knob">
+                                        <i class="fas fa-sun theme-toggle-icon"></i>
+                                        <i class="fas fa-moon theme-toggle-icon"></i>
+                                    </span>
+                                </span>
+                            </label>
+                        </div>
+                    </li>
                     <li><a href="https://www.linkedin.com" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="prank.html" target="_blank" class="menu-icon"><img src="OnlyFans_Social_Icon_Circle_White.svg" alt="OnlyFans" class="onlyfans-logo"></a></li>
                     <li><a href="book-time.html" class="menu-text">Book time with me</a></li>
