--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav id="menu" class="menu">
                 <ul>
                     <li>
-                        <div class="theme-toggle-wrapper" style="display: none;">
+                        <div class="theme-toggle-wrapper">
                             <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
                             <label for="themeToggleButton" class="theme-toggle-label">
                                 <span class="theme-toggle-track">
