--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </li>
                     <li><a href="https://www.linkedin.com" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="prank.html" target="_blank" class="menu-icon"><img src="OnlyFans_Social_Icon_Circle_White.svg" alt="OnlyFans" class="onlyfans-logo"></a></li>
-                    <li><a href="book-time.html" class="menu-text">Book time with me</a></li>
+                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Book time with me</a></li>
                 </ul>
             </nav>
         </header>
