--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
 
         <section id="skills">
-            <h2>Skillz</h2>
+            <h2>Skills</h2>
             <h3>Core Skills</h3>
             <ul id="skillList"></ul>
             <h3>Tools & Frameworks</h3>
@@ -72,4 +72,11 @@
             <ul id="certificationList"></ul>
         </section>
 
-        <section id="languages ​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+        <section id="languages">
+            <h2>Languages</h2>
+            <ul id="languageList"></ul>
+        </section>
+    </div>
+</body>
+
+</html>
