--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             </nav>
         </header>
 
-        <section id="productManagement">
-            <h2>Product Management</h2>
-            <ul id="productManagementList"></ul>
+        <section id="summary">
+            <h2>Summary</h2>
+            <ul id="summaryList"></ul>
         </section>
 
         <section id="professionalExperience">
