--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                             </label>
                         </div>
                     </li>
-                    <li><a href="https://www.linkedin.com" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="prank.html" target="_blank" class="menu-icon"><img src="OnlyFans_Social_Icon_Circle_White.svg" alt="OnlyFans" class="onlyfans-logo"></a></li>
+                    <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="prank.html" target="_blank" class="menu-icon"><img src="assets/images/logos/OnlyFans_Social_Icon_Circle_White.svg" alt="OnlyFans" class="onlyfans-logo"></a></li>
                     <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Book time with me</a></li>
                 </ul>
             </nav>
@@ -67,8 +67,8 @@
             <ul id="funSkills"></ul>
         </section>
 
-        <section id="certifications">
-            <h2>Certifications</h2>
+<!--        <section id="certifications">
+            <h3>Certifications</h3>
             <ul id="certificationList"></ul>
         </section>
 
@@ -76,6 +76,7 @@
             <h2>Languages</h2>
             <ul id="languageList"></ul>
         </section>
+-->
     </div>
 </body>
 
