--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <ul id="funSkills"></ul>
         </section>
 
-<!--        <section id="certifications">
+        <!--
+        <section id="certifications">
             <h3>Certifications</h3>
             <ul id="certificationList"></ul>
         </section>
@@ -76,7 +77,7 @@
             <h2>Languages</h2>
             <ul id="languageList"></ul>
         </section>
--->
+        -->
     </div>
 </body>
 
