--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remy Russell's Draft Resume (last updated 4/1/25) </title>
+    <title>Remy Russell's Resume</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
@@ -44,13 +44,16 @@
             </nav>
         </header>
 
-        <section id="summary">
-            <h2>Summary</h2>
-            <ul id="summaryList"></ul>
-        </section>
+        <section id="workExperience">
+            <h2>Work Experience</h2>
+            <section id="summary">
+                <h2>Summary</h2>
+                <ul id="summaryList"></ul>
+            </section>
 
-        <section id="professionalExperience">
-            <h2>Professional Experience</h2>
+            <section id="professionalExperience">
+                <h2>Professional Experience</h2>
+            </section>
         </section>
 
         <section id="education">
