--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </li>
                     <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="prank.html" target="_blank" class="menu-icon"><img src="assets/images/logos/prank.svg" alt="prank" class="prank-logo"></a></li>
-                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Book time with me</a></li>
+                    <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Watch my ChatGPT wrapper demo</a></li>
                 </ul>
             </nav>
         </header>
