--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Remy Russell's Draft Resume</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.um鄭.min.js"></script>
     <script src="scripts.js" defer></script>
 </head>
 
@@ -19,6 +20,9 @@
                 <p id="email"></p>
             </div>
             <p id="role"></p>
+            <button id="downloadPdfButton" class="download-pdf">
+                <i class="fas fa-file-pdf"></i> Download PDF
+            </button>
             <button id="menuToggleButton" class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </button>
