--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remy Russell's Draft Resume</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.um鄭.min.js"></script>
-    <script src="scripts.js" defer></script>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="/scripts.js" defer></script>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                         </div>
                     </li>
                     <li><a href="https://www.linkedin.com/in/remyrussell" target="_blank" class="menu-icon"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="prank.html" target="_blank" class="menu-icon"><img src="assets/images/logos/prank.svg" alt="prank" class="prank-logo"></a></li>
+                    <li><a href="/prank.html" target="_blank" class="menu-icon"><img src="/assets/images/logos/prank.svg" alt="prank" class="prank-logo"></a></li>
                     <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Watch my ChatGPT wrapper demo</a></li>
                 </ul>
             </nav>
