--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
                 <p id="email"></p>
             </div>
             <p id="role"></p>
-            <button id="downloadPdfButton" class="download-pdf">
-                <i class="fas fa-file-pdf"></i> Download PDF
-            </button>
             <button id="menuToggleButton" class="menu-toggle">
                 <i class="fas fa-bars"></i>
             </button>
             <nav id="menu" class="menu">
                 <ul>
+                    <li>
+                        <button id="downloadPdfButton" class="download-pdf menu-text">
+                            <i class="fas fa-print"></i> PDF
+                        </button>
+                    </li>
                     <li>
                         <div class="theme-toggle-wrapper">
                             <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
