--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                         </button>
                     </li>
                     <li>
+                        <a href="/dogs.html" class="menu-text">Photos of my dogs</a>
+                    </li>
+                    <li>
                         <div class="theme-toggle-wrapper">
                             <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
                             <label for="themeToggleButton" class="theme-toggle-label">
