--- a/dogs.html
+++ b/dogs.html
@@ -15,11 +15,11 @@
         </header>
         <section class="gallery">
             <!-- Replace these with your actual dog photos -->
-            <img src="/assets/images/dogs/dog1.jpeg" alt="Dog 1" class="dog-photo">
-            <img src="/assets/images/dogs/dog2.jpeg" alt="Dog 2" class="dog-photo">
-            <img src="/assets/images/dogs/dog3.jpeg" alt="Dog 3" class="dog-photo">
-            <img src="/assets/images/dogs/dog4.jpeg" alt="Dog 4" class="dog-photo">
-            <img src="/assets/images/dogs/dog5.jpeg" alt="Dog 5" class="dog-photo">
+            <img src="/assets/images/dogs/dog1.jpg" alt="Dog 1" class="dog-photo">
+            <img src="/assets/images/dogs/dog2.jpg" alt="Dog 2" class="dog-photo">
+            <img src="/assets/images/dogs/dog3.jpg" alt="Dog 3" class="dog-photo">
+            <img src="/assets/images/dogs/dog4.jpg" alt="Dog 4" class="dog-photo">
+            <img src="/assets/images/dogs/dog5.jpg" alt="Dog 5" class="dog-photo">
         </section>
     </div>
 </body>
