--- a/dogs.html
+++ b/dogs.html
@@ -20,6 +20,9 @@
             <img src="/assets/images/dogs/dog3.jpg" alt="Dog 3" class="dog-photo">
             <img src="/assets/images/dogs/dog4.jpg" alt="Dog 4" class="dog-photo">
             <img src="/assets/images/dogs/dog5.jpg" alt="Dog 5" class="dog-photo">
+            <img src="/assets/images/dogs/dog6.jpg" alt="Dog 5" class="dog-photo">
+            <img src="/assets/images/dogs/dog7.jpg" alt="Dog 5" class="dog-photo">
+            <img src="/assets/images/dogs/dog8.jpg" alt="Dog 5" class="dog-photo">
         </section>
     </div>
 </body>
