--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
         <section id="education">
             <h2>Education</h2>
         </section>
+
+        <section id="skills">
+            <h3>Core Skills</h3>
+            <ul id="skillList"></ul>
+            <h3>Tools & Frameworks</h3>
+            <ul id="toolsAndFrameworks"></ul>
+            <h3>Interests & Hobbies</h3>
+            <ul id="funSkills"></ul>
+        </section>
     </div>
     <button id="backToTop" class="back-to-top" title="Back to Top">
         <i class="fas fa-arrow-up"></i>
