--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remy Russell's Resume</title>
+    <title>Remy Russell's Draft Resume</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -70,11 +70,11 @@
         </section>
 
         <section id="skills">
-            <h3>Core Skills</h3>
+            <h2>Core Skills</h2>
             <ul id="skillList"></ul>
-            <h3>Tools & Frameworks</h3>
+            <h2>Tools & Frameworks</h2>
             <ul id="toolsAndFrameworks"></ul>
-            <h3>Interests & Hobbies</h3>
+            <h2>Interests & Hobbies</h2>
             <ul id="funSkills"></ul>
         </section>
     </div>
