--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <section id="summary">
             <h2>Summary</h2>
-            <ul id="summaryList"></ul>
+            <p id="summaryText"></p>
         </section>
 
         <section id="professionalExperience">
@@ -67,6 +67,11 @@
 
         <section id="education">
             <h2>Education</h2>
+        </section>
+
+        <section id="certifications">
+            <h2>Certifications</h2>
+            <ul id="certificationList"></ul>
         </section>
 
         <section id="skills">
@@ -81,6 +86,6 @@
     <button id="backToTop" class="back-to-top" title="Back to Top">
         <i class="fas fa-arrow-up"></i>
     </button>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93615d411baab039',t:'MTc0NTYyMTA1OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 
 </html>
