--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <h2>Education</h2>
         </section>
 
+        <!-- To remove Certifications entirely, delete this section -->
         <section id="certifications">
             <h2>Certifications</h2>
             <ul id="certificationList"></ul>
