--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Remy Russell's Draft Resume</title>
-    <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="/scripts.js" defer></script>
+    <script src="./scripts.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -46,9 +45,9 @@
                     <li class="dropdown">
                         <a href="#" class="menu-text dropdown-toggle">More</a>
                         <ul class="dropdown-menu">
-                            <li><a href="/dogs.html" class="menu-text">Photos of my dogs</a></li>
+                            <li><a href="./dogs.html" class="menu-text">Photos of my dogs</a></li>
                             <li><a href="https://youtu.be/dQw4w9WgXcQ?si=A4PUEV5_YA3G-0Xj" class="menu-text">Watch my ChatGPT wrapper demo</a></li>
-                            <li><a href="/prank.html" target="_blank" class="menu-icon"><img src="/assets/images/logos/prank.svg" alt="prank" class="prank-logo"></a></li>
+                            <li><a href="./prank.html" target="_blank" class="menu-icon"><img src="./assets/images/logos/prank.svg" alt="prank" class="prank-logo"></a></li>
                         </ul>
                     </li>
                 </ul>
