--- a/dogs.html
+++ b/dogs.html
@@ -4,16 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photos of My Dogs</title>
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="stylesheet" href="/dogs.css">
+    <link rel="stylesheet" href="/general_styles.css">
+    <link rel="stylesheet" href="/override_styles_full_width.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <button id="menuToggleButton" class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <nav id="menu" class="menu">
+        <ul>
+            <li><a href="/index.html" class="menu-text">Home</a></li>
+            <li><a href="/photos_of_my_dogs_page.html" class="menu-text">Dog Photos</a></li>
+            <li class="dropdown">
+                <a href="#" class="menu-text dropdown-toggle">More</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#gallery" class="menu-text">Gallery</a></li>
+                    <li><a href="#contact" class="menu-text">Contact</a></li>
+                </ul>
+            </li>
+            <li class="theme-toggle-wrapper">
+                <input type="checkbox" id="themeToggleButton" class="theme-toggle-checkbox">
+                <label for="themeToggleButton" class="theme-toggle-label">
+                    <span class="theme-toggle-track">
+                        <span class="theme-toggle-knob">
+                            <i class="theme-toggle-icon fa fa-sun"></i>
+                            <i class="theme-toggle-icon fa fa-moon"></i>
+                        </span>
+                    </span>
+                </label>
+            </li>
+        </ul>
+    </nav>
     <div class="container">
         <header>
             <h1>Photos of My Dogs</h1>
             <a href="/index.html" class="back-link">Back to Resume</a>
         </header>
-        <section class="gallery">
+        <section class="gallery" id="gallery">
             <img src="/assets/images/dogs/dog1.jpeg" alt="Dog 1" class="dog-photo">
             <img src="/assets/images/dogs/dog2.jpeg" alt="Dog 2" class="dog-photo">
             <img src="/assets/images/dogs/dog3.jpeg" alt="Dog 3" class="dog-photo">
@@ -27,30 +57,6 @@
     <button id="backToTop" class="back-to-top" title="Back to Top">
         <i class="fas fa-arrow-up"></i>
     </button>
-    <script>
-        // Apply the saved theme or default to dark
-        document.addEventListener('DOMContentLoaded', () => {
-            const savedTheme = localStorage.getItem('theme') || 'dark';
-            document.body.className = savedTheme === 'dark' ? 'theme-dark' : '';
-
-            // Back to Top button functionality
-            const backToTopButton = document.getElementById('backToTop');
-            if (backToTopButton) {
-                backToTopButton.addEventListener('click', () => {
-                    try {
-                        window.scrollTo({ top: 0, behavior: 'smooth' });
-                    } catch (e) {
-                        console.error('Scroll failed:', e);
-                        window.scrollTo(0, 0);
-                    }
-                });
-                window.addEventListener('scroll', () => {
-                    const scrollPosition = window.scrollY || document.documentElement.scrollTop;
-                    const viewportHeight = window.innerHeight;
-                    backToTopButton.style.display = scrollPosition > viewportHeight ? 'block' : 'none';
-                });
-            }
-        });
-    </script>
+    <script src="/scripts (16).js"></script>
 </body>
 </html>
